   to signal a failed authentication.
   This has been done in order allow customized error messages on failed auth.
   Also it now expects a third 'handler' argument which is passed in order to
   allow IP-based authentication logic.
   Existing code overriding validate_authentication() must be changed in
   accordance.

 * Issue 223: ftpserver.py has been split in submodules.

Bugfixes:

 * Issue 131: IPv6 dual-stack support was broken.

 * Issue 206: can't change directory (CWD) when using UnixAuthorizer and process
   cwd is == "/root".

 * Issue 211: pyftpdlib doesn't work if deprecated py-sendfile 1.2.4 module is
   installed.

 * Issue 215: usage of FTPHandler.sleeping attribute could lead to 100% CPU
   usage. FTPHandler.sleeping is now removed. self.add_channel() /
   self.del_channel() should be used instead.

New modules:

All the code contained in pyftpdlib/ftpserver.py and pyftpdlib/contrib
namespaces has been moved here:

 * pyftpdlib.authorizers
 * pyftpdlib.filesystems
 * pyftpdlib.servers
 * pyftpdlib.handlers
 * pyftpdlib.logs

New APIs:

 * pyftpdlib.authorizers.AuthenticationFailed
 * pyftpdlib.filesystems.FilesystemError
 * pyftpdlib.servers.ThreadedFTPServer
 * pyftpdlib.servers.MultiprocessFTPServer
 * pyftpdlib.handlers.FTPHandler's on_connect() and on_disconnect() callbacks.
 * FTPServer, FTPHandler, DTPHandler new ioloop attribute.
 * pyftpdlib.lib.ioloop.IOLoop class (not supposed to be used directly)

Deprecated namespaces:

 * pyftpdlib.ftpserver
 * pyftpdlib.contrib/*

Incompatible API changes:

 * All the main classes have been extracted from ftpserver.py and split into sub
   modules.

  ----------------------------------------------------------------------------
  BEFORE                               | NOW
  ----------------------------------------------------------------------------
  pyftpdlib.ftpserver.FTPServer        | pyftpdlib.servers.FTPServer
  pyftpdlib.ftpserver.FTPHandler       | pyftpdlib.handlers.FTPHandler